--- a/css/styleass2.css
+++ b/css/styleass2.css
@@ -1003,619 +1003,46 @@ h1 {
 
 
 /* --------------------------------section six---------------------------------------- */
-.scope_s6{
-  display: flex;
-  padding: 30px 84px 130px 84px;
-  margin: 0 -15px;
-  text-align: start;
-}
-
-.scopetxt_s6 > h5{
-  font-size: 32px;
-  font-weight:600;
-  width: 457px;
-  margin: 0px 0px 20px 0px;
-  display: inline-block !important;
-  padding-bottom: 20px;
-}
-
-.scopetxt_s6  h6{
-  font-size: 14px;
-  color: #6f6f6f;
-  font-family: 'Roboto';
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  width: 457px;
-  padding: 0px 0px 10px 22px;
-  margin: 0px 0px 10px 0px;
-  font-weight: 500;
-}
-
-.scopetxtline_s6{
-  display: inline-flex;
-  padding-bottom: 10px;
-}
-
-#check_icon{
-  font-size: 17px;
-  top: 1px;
-  left: 0;
-  font-weight: blod;
-  color: #6f6f6f;
-}
-
-#button_s6 {
-  z-index: 1;
-  position: relative;
-  font-size: 13px;
-  font-weight: 580;
-  font-family: inherit;
-  color: white;
-  padding: 8px 24px;
-  outline: none;
-  border: none;
-  background-color:#1e1e1e;
-  margin-top: 15px;
-  border-radius: 6px;
-}
-
-#button_s6:hover {
-  cursor: pointer;
-}
-
-#button_s6::before {
-  content: '';
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border: 2px solid #1b1a1a;
-  border-radius: 6px;
-  transform-origin: center;
-  transform: scale(1);
-}
-
-#button_s6:hover::before {
-  transition: all 0.75s ease-in-out;
-  transform-origin: center;
-  transform: scale(1.75);
-  opacity: 0;
-  background-color: #dadada;
-  color: #1e1e1e;
-}
-
-
-/* ----------------------------section seven----------------------------------- */
-.saven > .row > .col  {
-  background-color: #f7f7f7;
-}
-#h2col{
-  padding: 60px;
-  font-weight: bolder;
-  width: 600px;
-  font-size: 3rem;
-}
-
-.icontext{
-  display: flex;
-  position: relative;
-  margin-left: 50px;
-}
-
-.icon{
-  font-size: 40px;
-  color:#6f6f6faf;
-  padding-right: 30px;
-  position: absolute;
-  
-  
-}
-
-
-.icontext h5{
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 30px;
-  margin: 0 0 5px;
-  box-sizing: border-box;
-  max-width: 300px;
-  padding-left: 75px;
-}
-
-#iconparg{
-  font-size: 14px;
-  color: #6f6f6f;
-  padding-left: 125px;
-  width: 300px;
-  font-weight: 400;
-  max-width: 1500px;
-  line-height: 24px;
-}
-
-#halfimg{
-  width: 100%;
-  height: 100%;
-}
-
-/* ----------------------------section eight----------------------------------- */
-.eight{
-  padding: 130px 84px 130px 84px;
-  
-}
-.all_s8{
-  padding: 0 0 130px 0;
-}
-
-.txt_s8{
-  text-align: center;
-}
-
-.txt1_s8{
-  color: #939393;
-  font-size: 12px;
-  margin: 0 0 5px;
-  line-height: 20px;
-  font-weight: 500;
-}
-
-.txt2_s8{
-  color: #232323;
-  font-size: 32px;
-  margin: 0 0 20px;
-  font-weight: 900;
-  text-shadow: 2px 0px 2px #1e1e1e;
-}
-
-#line_s8{
-  border-bottom: 1px solid #ff214f;
-  width: 120px;
-  margin: auto;
-}
-
-.cardscope {
-  background-color: transparent;
-  width: 350px;
-  height: 252px;
-  perspective: 1000px;
-}
-
-.cardscope_i{
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.3s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-
-
-.cardscope:hover .cardscope_i {
-  transform: rotateY(180deg);
-}
-
-.cardscope_img, .cardscope_p {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.cardscope_img {
-  background-color: #bbb;
-  color: black;
-}
-
-.cardscope_p {
-  background-color: #ff214f;
-  color: white;
-  transform: rotateY(180deg);
-  text-align: center;
-  font-size: 12px;
-  padding: 110px 40px 0;
-  font-family: 'Roboto';
-}
-
-#txt1box_s8{
-  font-size: 14px;
-  text-align: center;
-  padding-bottom:2px;
-  margin-top: 25px;
-  font-weight: 600;
- padding-right: 50px;
-}
-#txt2box_s8{
-  font-size: 14px;
-  text-align: center;
-  font-family: 'Roboto';
-  color: #6f6f6f;
-  padding-right: 50px;
-
-}
-
-/* ----------------------------section nine----------------------------------- */
-.scrol8{
-  background-image: url("../images/bgimg_static.jpg");
-  min-height: 500px; 
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-          
-}
-
-.scrol2{
- padding: 130px 60px 130px 60px ;
-}
-
-.line1h{
-  font-size: 45px;
-  width: 450px;
-  font-weight: 600;
-  color: #fafafa;
-  margin: 0 0 20px;
-  line-height: 50px;
-}
-
-.parag1{
-  color: #6f6f6f;
-  width: 480px;
-  font-size: 15px;
-  padding-bottom: 30px;
-  line-height: 1.8;
-}
-.imglap{
-  text-align: center;
-  width: 670px;
-  padding-right: 30px;
-}
-
-.txtlinesc{
-  display:inline-flex;
- 
-}
-
-#pinkcheck_icon{
-  font-size: 18px;
-  top: 1px;
-  left: 0;
-  font-weight: blod;
-  color: #ff214f;
-}
-
-.txtlinesc h6{
-  font-size: 16px;
-  color: #6f6f6f;
-  padding: 0px 0px 10px 22px;
-  margin: 0px 0px 10px 0px;
-  font-weight: 500;
-}
-
-.linedivide{
-  border-bottom: 1px solid #6f6f6f;
-  width: 520px;
-  margin-bottom: 10px;
-}
-
-/* ----------------------------section ten----------------------------------- */
-.all-s10{
-  padding: 130px 84.5px 130px 84.5px;
-  position: relative;
-}
-
-.img-s10{
-  width: 500px;
-  position: absolute;
-  left: 160px;
-  
-}
-
-.txth1-s10{
-  font-size: 16px;
-  line-height: 23px;
-  font-weight: 600;
-  color: #ff214f;   
-  margin-bottom: 10px !important;
-}
-
-.txth2-s10{
-  font-size: 32px;
-  line-height: 40px;
-  font-weight: 900;
-  color: #232323;   
-  margin-bottom: 20px !important;
-}
-
-.txtp-s10{
-  /* width: 600px; */
-  font-size: 15px;
-  color: #6f6f6f;
-  line-height: 30px;
-  font-family: 'Roboto';
-}
-
-
-#button_s10 {
-  z-index: 1;
-  position: relative;
-  font-size: 13px;
-  font-weight: 580;
-  font-family: inherit;
-  color: white;
-  padding: 8px 24px;
-  outline: none;
-  border: none;
-  background-color:#1e1e1e;
-  margin-top: 15px;
-  border-radius: 6px;
-}
-
-#button_s10:hover {
-  cursor: pointer;
-}
-
-#button_s10::before {
-  content: '';
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border: 2px solid #1b1a1a;
-  border-radius: 6px;
-  transform-origin: center;
-  transform: scale(1);
-}
-
-#button_s10:hover::before {
-  transition: all 0.75s ease-in-out;
-  transform-origin: center;
-  transform: scale(1.75);
-  opacity: 0;
-  background-color: #dadada;
-  color: #1e1e1e;
-}
-
-.line-s10{ 
-  margin: auto;
-  border-bottom: 1px solid #6f6f6f;
-  width: 1200px;
-}
-
-    /* ----------------------------section eleven----------------------------------- */
-    .all-s11{
-      padding: 130px 84.5px 130px 84.5px;
-    }
-
-    .icontext-s11{
-      display: flex;
-      position: relative;
-      margin-left: 50px;
-    }
-    
-    .icon-s11{
-      font-size: 40px;
-      color:#6f6f6faf;
-      padding-right: 30px;
-      position: absolute;
-      
-      
-    }
-    
-    
-    .icontext-s11 h5{
-      font-size: 16px;
-      font-weight: 900;
-      line-height: 30px;
-      margin: 0 0 5px;
-      box-sizing: border-box;
-      max-width: 300px;
-      padding-left: 75px;
-    }
-    
-    #iconparg-s11{
-      font-size: 14px;
-      color: #6f6f6f;
-      padding-left: 125px;
-      width: 300px;
-      font-weight: 400;
-      max-width: 1500px;
-      line-height: 24px;
-    }
-
-
- /* ----------------------------section twelve----------------------------------- */
-.all-s12{
-  background-color: #f7f7f7;
-  height: 678px;
-  display: inline;
-}
-.txt-s12{
-  padding-top: 50px;
-  padding-left: 140px;
- 
-}
-.txth1-s12{
-  width: 400px;
-  font-size: 16px;
-  color: #ff214f;
-  font-weight: 900;
-  word-spacing: 2px;
-}
-
-.txth2-s12{
-  width: 400px;
-  font-size: 40px;
-  line-height: 55px;
-  font-weight: 900;
-}
-
-.txtp-s12{
-  width: 370px;
-  font-size: 14px;
-  color: #8e8e8e;
-  line-height: 28px;
-  font-weight: 600;
-}
-
-
-#halfimg-s12{
-  width: 800px;
-  padding-left: 0;
-  padding-right: 0
-
-}
-
- /* ----------------------------section threeteen----------------------------------- */
-
-.counter_el-s13{
-  padding:130px 17px 130px 130px;
-  display:inline-flex;
-}
-
-.icon-num-s13{
-  font-size: 50px;
-  color: #8e8e8e;
-  padding-right: 10px;
-}
-
-.num{
-  font-size: 25px;
-  color: #232323;
-}
-
-#texth{
-  font-size: 12px;
-  color: #8e8e8e;
-  padding-top: 10px;
-  font-weight: 600;
-}
-
-/* ----------------------------section fourteen----------------------------------- */
-
-.fourteen{
-  background-image: url("../images/img-s17.jpg");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-.all-s14{
-  text-align: center;
-  padding: 130px 84px 130px 84px;
-  color: #e8e9eb;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.icon-s14{
-  font-size: 100px;
-  color: #e8e9eb;
-}
-
-.icon-s14:hover {
-  transition: all 0.75s ease-in-out;
-  transform-origin: center;
-  transform: scale(1.75);
-  opacity: 0.5;
-  color: #939393;
-}
-
-.txth-s14{
-  text-align: center;
-  font-size: 46px;
-  line-height: 50px;
-  font-weight: 600;
-  width: 1000px;
-  margin: auto;
-  padding-bottom: 60px;
-  padding-top: 50px;
-}
-
-.txtp-s14{
-  font-size: 14px;
-  margin: 0 0 25px;
-  color: #939393;
-  width: 800px;
-  margin: auto;
-  padding-bottom: 60px;
-  line-height: 25px;
-}
-
-#button_s14 {
-  z-index: 1;
-  position: relative;
-  font-size: 13px;
-  font-weight: 580;
-  font-family: inherit;
-  color: #1b1a1a;
-  padding: 8px 24px;
-  outline: none;
-  border: none;
-  background-color:#e8e9eb;
-  margin-top: 15px;
-  border-radius: 6px;
-}
-
-#button_s14:hover {
-  cursor: pointer;
-}
-
-#button_s14::before {
-  content: '';
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border: 2px solid #e8e9eb;
-  border-radius: 6px;
-  transform-origin: center;
-  transform: scale(1);
-}
-
-#button_s14:hover::before {
-  transition: all 0.75s ease-in-out;
-  transform-origin: center;
-  transform: scale(1.75);
-  opacity: 0;
-  background-color: #1b1a1a;
-  color: #e8e9eb;
-}
-
-
-/* ----------------------------section five----------------------------------- */
-
-/* ----------------------------section sixteen----------------------------------- */
 .sixteen{
+  
   background-color: #f7f7f7;
-  padding-bottom: 100px
-}
-.cardscroll-s16{
-  background-color: #f7f7f7;
-  padding: 0px 84px 130px 84px;
+  padding: 130px 85px 130px 85px;
   margin: 0px -15px;
 }
-.wrapper-s16{
+
+.wrapper-s16 {
   display: flex;
-  max-height: 120px;
+  max-height: 500px;
   overflow-x: auto;
+  
+}
+
+.wrapper-s16::-webkit-scrollbar{
+  width: 0;
 }
 
 .wrapper-s16 .card-s16{
-  min-width: 350px;
-  height: 110px;
-  line-height: 110px;
+  min-width: 390px;
+  line-height: 25px;
+  
 }
 .header12-s16{
   text-align: center;
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
+.card-s16 {
+  box-shadow: 0 4px 4px 0 rgba(0,0,0.1,0.2);
+  transition: 0.3s;
+  text-align: center;
+  padding: 14%;
+  border:0.5px solid #f1f1f1;
+  margin-right:30px;
+  width: 410px;
+  background-color: #fff;
+}
+
 
 .hline1-s16{
   font-size: 12px;
@@ -1630,12 +1057,6 @@ h1 {
 }  
 
 
-.card-s16 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  text-align: center;
-  padding: 14%;
-}
 
 #personimg-s16{
   border-radius: 100%;
@@ -1670,7 +1091,7 @@ h1 {
 }
 
 
-/* ----------------------------section eightteen----------------------------------- */
+/* ----------------------------section saventeen----------------------------------- */
 .saventeen{
   padding: 130px 84px 130px 84px;
   font-family: 'Roboto';
@@ -1773,9 +1194,9 @@ h1 {
   font-weight: 500;
 }
 
-/* ----------------------------section nineteen----------------------------------- */
+/* ----------------------------section eighteen----------------------------------- */
 
-.nineteen{
+.eighteen{
   background-color: #232323;
 }
 
